<resources>
    <string name="app_name">Civil Advocacy</string>
    <string name="about_strres">About</string>
    <string name="location_strres">Location</string>
    <string name="official_title_strres">TextView</string>
    <string name="official_name_strres">TextView</string>
    <string name="deniedText">Location permission was denied - cannot determine address</string>
    <string name="civil_advocacy_strres">Civil Advocacy</string>
    <string name="data_provided_by_strres">Data provided by</string>
    <string name="copyright_strres">© 2023, Jinit Parikh</string>
    <string name="version_strres">Version 1.0</string>
    <string name="about_screen_url">https://developers.google.com/civic-information/</string>
    <string name="about_screen_url_placeholder"><u>Google Civic Information API</u></string>
    <string name="addressvalue_strres" ><u>a</u></string>
    <string name="phoneno_strres" ><u>p</u></string>
    <string name="emailid_strres" ><u>e</u></string>
    <string name="url_strres" ><u>u</u></string>
</resources>