<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout_officialactivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context=".OfficialActivity">

    <TextView
        android:id="@+id/email_officialactivity_vid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="Email:"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/phone_officialactivity_vid"
        app:layout_constraintTop_toBottomOf="@+id/phone_officialactivity_vid" />

    <TextView
        android:id="@+id/name_officialactivity_vid"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_officialactivity_vid" />

    <TextView
        android:id="@+id/office_officialactivity_vid"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/name_officialactivity_vid"
        app:layout_constraintTop_toBottomOf="@+id/name_officialactivity_vid" />

    <TextView
        android:id="@+id/party_officialactivity_vid"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/office_officialactivity_vid"
        app:layout_constraintTop_toBottomOf="@+id/office_officialactivity_vid" />

    <ImageView
        android:id="@+id/photo_officialactivity_vid"
        android:layout_width="115dp"
        android:layout_height="137dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_officialactivity_vid"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/facebook_officialactivity_vid"
        android:layout_width="41dp"
        android:layout_height="44dp"
        android:layout_marginTop="24dp"
        android:onClick="clickedFB"
        app:layout_constraintStart_toStartOf="@+id/party_officialactivity_vid"
        app:layout_constraintTop_toBottomOf="@+id/party_officialactivity_vid"
        app:srcCompat="@drawable/facebook" />

    <ImageView
        android:id="@+id/twitter_officialactivity_vid"
        android:layout_width="41dp"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:onClick="clickedTwitter"
        app:layout_constraintStart_toEndOf="@+id/youtube_officialactivity_vid"
        app:layout_constraintTop_toBottomOf="@+id/party_officialactivity_vid"
        app:srcCompat="@drawable/twitter" />

    <ImageView
        android:id="@+id/youtube_officialactivity_vid"
        android:layout_width="41dp"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:onClick="clickedYT"
        app:layout_constraintStart_toEndOf="@+id/facebook_officialactivity_vid"
        app:layout_constraintTop_toBottomOf="@+id/party_officialactivity_vid"
        app:srcCompat="@drawable/youtube" />

    <ImageView
        android:id="@+id/partylogo_officialactivity_vid"
        android:layout_width="32dp"
        android:layout_height="29dp"
        android:layout_marginTop="102dp"
        app:layout_constraintEnd_toEndOf="@+id/photo_officialactivity_vid"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="@+id/photo_officialactivity_vid"
        app:layout_constraintTop_toTopOf="@+id/photo_officialactivity_vid" />

    <TextView
        android:id="@+id/addresstitle_officialactivity_vid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="94dp"
        android:text="Address:"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/party_officialactivity_vid"
        app:layout_constraintTop_toBottomOf="@+id/photo_officialactivity_vid" />

    <TextView
        android:id="@+id/addressvalue_officialactivity_vid"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="8dp"
        android:onClick="clickAddress"
        android:text="@string/addressvalue_strres"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addresstitle_officialactivity_vid" />

    <TextView
        android:id="@+id/phone_officialactivity_vid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="Phone:"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/addresstitle_officialactivity_vid"
        app:layout_constraintTop_toBottomOf="@+id/addresstitle_officialactivity_vid" />

    <TextView
        android:id="@+id/phoneNo_officialactivity_vid"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="18dp"
        android:onClick="clickCall"
        android:text="@string/phoneno_strres"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_officialactivity_vid" />

    <TextView
        android:id="@+id/emailid_officialactivity_id"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:onClick="clickEmail"
        android:text="@string/emailid_strres"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_officialactivity_vid" />

    <TextView
        android:id="@+id/website_officialactivity_vid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="Website:"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/email_officialactivity_vid"
        app:layout_constraintTop_toBottomOf="@+id/email_officialactivity_vid" />

    <TextView
        android:id="@+id/url_officialactivity_vid"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:onClick="goToInfoPage"
        android:text="@string/url_strres"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/website_officialactivity_vid" />

    <TextView
        android:id="@+id/location_officialactivity_vid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#6B1D78"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>